Ignore rounding error between clip_layer_length_ and scroll_layer_length_

We determined overlay scrollbar should show by comparing
clip_layer_length with scroll_layer_length of scrollbar_layer_impl.
clip_layer_length_ has rounding error form  pagescale division. The
scrollbar will appear when the rounding error makes clip_layer_length <
scroll_layer_length.

In this patch, we change to use ceil of clip length in device pixel and
floor of scroll length in device pixel for
compare. That means we only appear the scrollbar when clip_layer_length
is at least 1 physical px smaller than scroll_layer_length.

BUG=709062
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2803853007
Cr-Commit-Position: refs/heads/master@{#466570}

Former-commit-id: beb19669855bab47cda70ea40fbbe154eb3bfdc5