cc/base/math_util.h
@@ -296,7 +296,7 @@ class CC_BASE_EXPORT MathUtil {
   // Returns vector that y axis (0,1,0) transforms to under given transform.
   static gfx::Vector3dF GetYAxis(const gfx::Transform& transform);
 
-  static bool IsNearlyTheSameForTesting(float left, float right);
+  static bool IsFloatNearlyTheSame(float left, float right);
   static bool IsNearlyTheSameForTesting(const gfx::PointF& l,
                                         const gfx::PointF& r);
   static bool IsNearlyTheSameForTesting(const gfx::Point3F& l,
